Issue #SB-9416 fix: Fixed letters truncating in users segment

--- a/src/pages/user-and-groups/user-and-groups.scss
+++ b/src/pages/user-and-groups/user-and-groups.scss
@@ -137,6 +137,10 @@ page-user-and-groups {
       .icon.ion-md-information-circle{
         vertical-align: text-bottom;
       }
+
+      h6:first-child{
+        margin-top: 0px !important;
+      }
 }
 .padding-left-2{
   @include padding(null, null, null, 2px !important);
